--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
 					</p>
 					<ul>
 						<li>
-							<strong>Tool-Augmented LLMs</strong> and <strong>Agentic Systems</strong> for complex reasoning
+							<strong>LLM Agents</strong> and <strong>Agentic Systems</strong> for complex reasoning
 							<a href="https://agentflow.stanford.edu/" target="_blank">[AgentFlow]</a>
+							<a href="https://efficient-reasoning.github.io/" target="_blank">[LatentMAS]</a>
 							<a href="https://octotools.github.io/" target="_blank">[OctoTools]</a>
 							<a href="https://arxiv.org/abs/2510.06217" target="_blank">[TaTToo]</a>
 							<a href="https://arxiv.org/abs/2509.25370" target="_blank">[AgentDebug]</a>
@@ -154,7 +155,7 @@
 							<a href="https://promptpg.github.io/" target="_blank">[PromptPG]</a>
 						</li>
 						<li>
-							<strong>AI for Math</strong>: advancing mathematical reasoning capabilities of AI systems and LLMs across multimodal, knowledge-intensive, and real-world contexts
+							<strong>AI for Math</strong>: advancing mathematical reasoning of AI systems and LLMs across multimodal, knowledge-intensive, and real-world contexts
 							<a href="https://arxiv.org/abs/2506.07927" target="_blank">[IneqMath]</a>
 							<a href="https://mathvista.github.io/" target="_blank">[MathVista]</a>
 							<a href="https://arxiv.org/abs/2403.14624" target="_blank">[MathVerse]</a>
@@ -163,10 +164,10 @@
 							<a href="https://arxiv.org/abs/2110.13214" target="_blank">[IconQA]</a>
 							<a href="https://arxiv.org/abs/2305.12524v1" target="_blank">[TheoremQA]</a>
 							<a href="https://arxiv.org/abs/2212.10535" target="_blank">[DL4Math]</a>
-							<a href="https://mathai2024.github.io/" target="_blank">[MATH-AI]</a>
+							<a href="https://mathai2025.github.io/" target="_blank">[MATH-AI]</a>
 						</li>
 						<li>
-							<strong>AI for Science</strong>: AI systems that facilitate scientific reasoning and scientific discovery
+							<strong>AI for Science</strong>: AI for scientific reasoning and scientific discovery
 							<a href="https://scienceqa.github.io/" target="_blank">[ScienceQA]</a> 
 							<a href="https://arxiv.org/abs/2307.10635" target="_blank">[SciBench]</a> 
 							<!-- <a href="https://chameleon-llm.github.io/" target="_blank">[Chameleon]</a> -->
@@ -197,6 +198,18 @@
 			<h3 id="News" style="">News</h3>
 			<hr>
 			<ul>
+				<li>
+					<strong>[04/2025]&nbsp; <font color="red">New!</font></strong>
+					Excited to be invited to serve as a Senior Area Chair for <b><a href="https://2026.aclweb.org/" target="_blank">ACL 2026</a></b>!
+				</li>
+				<li>
+					<strong>[12/2025]&nbsp; <font color="red">New!</font></strong>
+					Excited that AgentFlow won <b>🏆 Best Paper Runner-up</b> at the <b><a href="https://efficient-reasoning.github.io/" target="_blank">Effective Reasoning Workshop</a></b>!
+				</li>	
+				<li>
+					<strong>[12/2025]&nbsp; <font color="red">New!</font></strong>
+					Excited to co-organize the 5th <b><a href="https://mathai2025.github.io/" target="_blank"></a>MATH-AI</a></b> Workshop at <b><a href="https://nips.cc/Conferences/2025" target="_blank">NeurIPS 2025</a></b>! See you in San Diego!
+				</li>
 				<li>
 					<strong>[11/2025]&nbsp; <font color="red">New!</font></strong>
 					Our paper on latent collaboration in multi-agent systems 
@@ -633,18 +646,18 @@
 			<!-- <li>October 25 - October 26, 2025:
 				<a href="" target="_blank">Stanford NLP Retreat, California</a>
 			</li> -->
-			<li>December 2 - December 7, 2025:
+			<!-- <li>December 2 - December 7, 2025:
 				<a href="https://neurips.cc/" target="_blank">NeurIPS 2025 at San Diego, California</a>
-			</li>
-			<!-- <li>June 3 - June 7, 2026:
-				<a href="https://www.thecvf.com/" target="_blank">CVPR 2026 at Denver, Colorado</a>
 			</li> -->
+			<li>June 3 - June 7, 2026:
+				<a href="https://www.thecvf.com/" target="_blank">CVPR 2026 at Denver, Colorado</a>
+			</li>
 			<!-- <li>June 29 - July 3, 2026:
 				<a href="https://learningtheory.org/colt2026/" target="_blank">COLT 2026 at San Diego, California</a>
 			</li> -->
-			<!-- <li>July 2 - July 7, 2026:
+			<li>July 2 - July 7, 2026:
 				<a href="https://2026.aclweb.org/" target="_blank">ACL 2026 at San Diego, California</a>
-			</li> -->
+			</li>
 			<!-- <li>September 27 - October 1, 2026:
 				<a href="https://www.iros26.org/" target="_blank">IROS 2026 at Pittsburgh, Pennsylvania</a>
 			</li> -->
@@ -676,36 +689,6 @@
 		</div>
 		<br>
 
-		<!-- Latent MAS -->
-		<div class="row publication-item" data-category="highlights, agentic">
-			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="projects/arxiv25_latentmas/cover.png" style="" alt="">
-			</div>
-			<div class="col-md-9">
-				<a href="">
-					<img src="asset/fire.png" id="logo">
-				</a>
-				<b>
-					<font color="black">
-						Latent Collaboration in Multi-Agent Systems
-					</font>
-				</b><br>
-				Jiaru Zou*, Xiyuan Yang*, Ruizhong Qiu*, Gaotang Li*, Katherine Tieu*, <b>Pan Lu*</b>, Ke Shen, Hanghang Tong, Yejin Choi, Jingrui He†, James Zou†, Mengdi Wang†, Ling Yang†
-				<br>
-				<b><a href="https://arxiv.org/abs/2511.20639" target="_blank">arXiv:2511.20639&nbsp;</a></b>
-				<a href="https://huggingface.co/papers/2511.20639" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="https://github.com/Gen-Verse/LatentMAS" target="_blank"> <small>[Code]&nbsp;</small></a>
-				<a href="https://x.com/LingYang_PU/status/1993510834245714001" target="_blank"> <small>[Twitter]&nbsp;</small></a>
-				<a href="projects/arxiv25_latentmas/bib.txt" target="_blank"> <small>[BibTex]</small></a>
-				<a href="https://github.com/Gen-Verse/LatentMAS" target="_blank"><img src="https://img.shields.io/github/stars/Gen-Verse/LatentMAS?style=social" alt="GitHub stars"></a>
-				<br>(*Core Contribution) (†Co-senior authors)<br>
-				<a id="award" href="https://huggingface.co/papers/date/2025-11-27" target="_blank">
-					<font color="red"><b>#1 Paper of the day on Hugging Face</b></font>
-				</a>
-			</div>
-		</div>
-		<hr>
-
 		<!-- AgentFlow -->
 		<div class="row publication-item" data-category="highlights, agentic">
 			<div class="col-md-3">
@@ -734,12 +717,46 @@
 				<a href="projects/arxiv25_agentflow/bib.txt" target="_blank"> <small>[BibTex]</small></a>
 				<a href="https://github.com/lupantech/AgentFlow" target="_blank"><img src="https://img.shields.io/github/stars/lupantech/AgentFlow?style=social" alt="GitHub stars"></a>
 				<br>(*Equal Contribution) (†Co-senior authors)<br>
+				<a id="award" href="https://efficient-reasoning.github.io/" target="_blank">
+					<font color="red"><b>🏆 Best Paper Runner-up, NeurIPS 2025 Effective Reasoning Workshop</b></font>
+				</a>
+				<br>
 				<a id="award" href="https://huggingface.co/papers/date/2025-10-08" target="_blank">
 					<font color="red"><b>#2 Paper of the day on Hugging Face</b></font>
 				</a>
 				<br>
 				<a id="award" href="https://huggingface.co/spaces?date=2025-W42" target="_blank">
 					<font color="red"><b>#1 Space of the week on Hugging Face</b></font>
+				</a>
+			</div>
+		</div>
+		<hr>
+
+		<!-- Latent MAS -->
+		<div class="row publication-item" data-category="highlights, agentic">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="projects/arxiv25_latentmas/cover.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="">
+					<img src="asset/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">
+						Latent Collaboration in Multi-Agent Systems
+					</font>
+				</b><br>
+				Jiaru Zou*, Xiyuan Yang*, Ruizhong Qiu*, Gaotang Li*, Katherine Tieu*, <b>Pan Lu*</b>, Ke Shen, Hanghang Tong, Yejin Choi, Jingrui He†, James Zou†, Mengdi Wang†, Ling Yang†
+				<br>
+				<b><a href="https://arxiv.org/abs/2511.20639" target="_blank">arXiv:2511.20639&nbsp;</a></b>
+				<a href="https://huggingface.co/papers/2511.20639" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://github.com/Gen-Verse/LatentMAS" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://x.com/LingYang_PU/status/1993510834245714001" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="projects/arxiv25_latentmas/bib.txt" target="_blank"> <small>[BibTex]</small></a>
+				<a href="https://github.com/Gen-Verse/LatentMAS" target="_blank"><img src="https://img.shields.io/github/stars/Gen-Verse/LatentMAS?style=social" alt="GitHub stars"></a>
+				<br>(*Core Contribution) (†Co-senior authors)<br>
+				<a id="award" href="https://huggingface.co/papers/date/2025-11-27" target="_blank">
+					<font color="red"><b>#1 Paper of the day on Hugging Face</b></font>
 				</a>
 			</div>
 		</div>
@@ -2078,6 +2095,10 @@
 					<strong>Program Chair</strong>, 
 					<a href="https://socalnlp.github.io/symp23/index.html" target="_blank">The 4th Southern California Natural Language Symposium (SoCal NLP)</a>,
 					Los Angeles, 2023.11
+				</li>
+				<li>
+					<strong>Senior Area Chair</strong>, 
+					<a>ACL 2026</a>
 				</li>
 				<li>
 					<strong>Senior Area Chair</strong>, 
