--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 			<hr>
 			<ul>
 				<li>
-					<strong>[04/2025]&nbsp; <font color="red">New!</font></strong>
+					<strong>[12/2025]&nbsp; <font color="red">New!</font></strong>
 					Excited to be invited to serve as a Senior Area Chair for <b><a href="https://2026.aclweb.org/" target="_blank">ACL 2026</a></b>!
 				</li>
 				<li>
@@ -650,7 +650,7 @@
 				<a href="https://neurips.cc/" target="_blank">NeurIPS 2025 at San Diego, California</a>
 			</li> -->
 			<li>June 3 - June 7, 2026:
-				<a href="https://www.thecvf.com/" target="_blank">CVPR 2026 at Denver, Colorado</a>
+				<a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2026 at Denver, Colorado</a>
 			</li>
 			<!-- <li>June 29 - July 3, 2026:
 				<a href="https://learningtheory.org/colt2026/" target="_blank">COLT 2026 at San Diego, California</a>
