--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 							<a href="https://arxiv.org/abs/2501.06590" target="_blank">[ChemAgent]</a>
 						</li>
 					</ul>
-					[25.10]
+					[25.12]
 					<font color="red">
 						 We are seeking students and collaborators to work on research in
 						<b> agentic AI, post-training LLMs, reinforcement learning, AI for Math, AI for Science, and related fields</b>. 
@@ -643,18 +643,18 @@
 		<h3 id="Travels" style="">Upcoming Travel</h3>
 		<hr>
 		<ul>
-			<!-- <li>October 25 - October 26, 2025:
-				<a href="" target="_blank">Stanford NLP Retreat, California</a>
-			</li> -->
-			<!-- <li>December 2 - December 7, 2025:
-				<a href="https://neurips.cc/" target="_blank">NeurIPS 2025 at San Diego, California</a>
-			</li> -->
+			<li>April 23 - April 27, 2026:
+				<a href="https://iclr.cc/Conferences/2026" target="_blank">ICLR 2026 at Rio de Janeiro, Brazil</a> (TBD)
+			</li>
 			<li>June 3 - June 7, 2026:
 				<a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2026 at Denver, Colorado</a>
 			</li>
 			<!-- <li>June 29 - July 3, 2026:
 				<a href="https://learningtheory.org/colt2026/" target="_blank">COLT 2026 at San Diego, California</a>
 			</li> -->
+			<li>July 6 - July 11, 2026:
+				<a href="https://icml.cc/Conferences/2026" target="_blank">ICML 2026 at Seoul, South Korea</a> (TBD)
+			</li>
 			<li>July 2 - July 7, 2026:
 				<a href="https://2026.aclweb.org/" target="_blank">ACL 2026 at San Diego, California</a>
 			</li>
@@ -863,7 +863,7 @@
 						Solving Inequality Proofs with Large Language Models
 					</font>
 				</b><br>
-				Jiayi Sheng*, Luna Lyu*, Jikai Jin, Tony Xia, Alex Gu, James Zou†, <b>Pan Lu†</b>
+				Pan Lu*, Jiayi Sheng*, Luna Lyu*, Jikai Jin, Tony Xia, Alex Gu, James Zou
 				<br>
 				<b><a href="https://arxiv.org/abs/2506.07927" target="_blank">NeurIPS 2025&nbsp;</a></b>
 				<a href="https://ineqmath.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
@@ -874,7 +874,7 @@
 				<a href="https://x.com/lupantech/status/1932866286427779586" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="projects/neurips25_ineqmath/bib.txt" target="_blank"> <small>[BibTex]</small></a>
 				<!-- <a href="https://github.com/lupantech/ineqmath" target="_blank"><img src="https://img.shields.io/github/stars/lupantech/ineqmath?style=social" alt="GitHub stars"></a> -->
-				<br>(*Equal Contribution) (†Co-senior authors)<br>
+				<br>(*Equal Contribution)<br>
 				<a id="award" href="https://knowledge-nlp.github.io/naacl2025/index.html" target="_blank">
 					<font color="red"><b>🏆 NeurIPS 2025 Spotlight (Top 3%)</b> </font>
 				</a>
@@ -2097,32 +2097,17 @@
 					Los Angeles, 2023.11
 				</li>
 				<li>
-					<strong>Senior Area Chair</strong>, 
-					<a>ACL 2026</a>
+					<strong>Senior Area Chair</strong>:
+					<a>ACL 2026, EMNLP 2025</a>
 				</li>
 				<li>
-					<strong>Senior Area Chair</strong>, 
-					<a>EMNLP 2025</a>
+					<strong>Area Chair (2026)</strong>:
+					<a>ICML 2026, ICLR 2026</a>
 				</li>
 				<li>
-					<strong>Area Chair</strong>, 
-					<a>ICML 2026</a>
+					<strong>Area Chair (2025)</strong>:
+					<a>NeurIPS 2025, ICLR 2025, ACL 2025</a>
 				</li>
-				<li>
-					<strong>Area Chair</strong>, 
-					<a>ICLR 2026</a>
-				</li>
-				<li>
-					<strong>Area Chair</strong>, 
-					<a>NeurIPS 2025</a>
-				</li>
-				<li>
-					<strong>Area Chair</strong>, 
-					<a>ICLR 2025</a>
-				</li>
-				<li>
-					<strong>Area Chair</strong>, 
-					<a>ACL 2025</a>
 				</li>
 			</ul>
 		<h4 id="Service" style="">Workshops and Tutorials</h4>
