added Adaptation of Agentic AI

--- a/index.html
+++ b/index.html
@@ -775,6 +775,32 @@
 		</div>
 		<hr>
 
+		<!-- Adaptation of Agentic AI -->
+		<div class="row publication-item" data-category="highlights, agentic">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="projects/arxiv25_adaptation/cover.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="">
+					<img src="asset/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">
+						Adaptation of Agentic AI
+					</font>
+				</b><br>
+				Pengcheng Jiang*, Jiacheng Lin*, Zhiyi Shi*, Zifeng Wang, Luxi He, Yichen Wu, Ming Zhong, Peiyang Song, Qizheng Zhang, Heng Wang, Xueqiang Xu, Hanwen Xu, Pengrui Han, Dylan Zhang, Jiashuo Sun, Chaoqi Yang, Kun Qian, Tian Wang, Changran Hu, Manling Li, Quanzheng Li, Hao Peng, Sheng Wang, Jingbo Shang, Chao Zhang, Jiaxuan You, Liyuan Liu, <b>Pan Lu</b>, Yu Zhang, Heng Ji, Yejin Choi, Dawn Song, Jimeng Sun, Jiawei Han†
+				<br>
+				<b><a href="https://github.com/pat-jj/Awesome-Adaptation-of-Agentic-AI/blob/main/paper.pdf" target="_blank">Work in Progress&nbsp;</a></b>
+				<a href="https://github.com/pat-jj/Awesome-Adaptation-of-Agentic-AI/blob/main/paper.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://github.com/pat-jj/Awesome-Adaptation-of-Agentic-AI" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="projects/arxiv25_adaptation/bib.txt" target="_blank"> <small>[BibTex]</small></a>
+				<a href="https://github.com/pat-jj/Awesome-Adaptation-of-Agentic-AI" target="_blank"><img src="https://img.shields.io/github/stars/pat-jj/Awesome-Adaptation-of-Agentic-AI?style=social" alt="GitHub stars"></a>
+				<br>(*Equal Contribution) (†Corresponding author)<br>
+			</div>
+		</div>
+		<hr>
+
 		<!-- TaTToo -->
 		<div class="row publication-item" data-category="agentic">
 			<div class="col-md-3">
