--- a/index.html
+++ b/index.html
@@ -645,34 +645,34 @@
 		<ul>
 			<!-- https://mlciv.com/ai-deadlines/?sub=ML,CV,CG,NLP,RO,SP,DM,AP,KR,HCI,EDU -->
 			<li>April 23 - April 27, 2026:
-				<a href="https://iclr.cc/Conferences/2026" target="_blank">ICLR 2026 at Rio de Janeiro, Brazil</a> (TBD)
+				<a href="https://iclr.cc/Conferences/2026" target="_blank">ICLR 2026, Rio de Janeiro, Brazil</a> (TBD)
 			</li>
 			<li>June 3 - June 7, 2026:
-				<a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2026 at Denver, Colorado</a>
+				<a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2026, Colorado Convention Center, Denver, Colorado</a>
 			</li>
 			<!-- <li>June 29 - July 3, 2026:
-				<a href="https://learningtheory.org/colt2026/" target="_blank">COLT 2026 at San Diego, California</a> (TBD)
+				<a href="https://learningtheory.org/colt2026/" target="_blank">COLT 2026, San Diego, California</a> (TBD)
 			</li> -->
-			<li>July 6 - July 11, 2026:
-				<a href="https://icml.cc/Conferences/2026" target="_blank">ICML 2026 at Seoul, South Korea</a> (TBD)
-			</li>
 			<li>July 2 - July 7, 2026:
-				<a href="https://2026.aclweb.org/" target="_blank">ACL 2026 at San Diego, California</a>
+				<a href="https://2026.aclweb.org/" target="_blank">ACL 2026, Grand Hyatt Manchester, San Diego, California</a>
+			</li>
+			<li>July 6 - July 11, 2026:
+				<a href="https://icml.cc/Conferences/2026" target="_blank">ICML 2026, COEX Convention & Exhibition Center, Seoul, South Korea</a> (TBD)
 			</li>
 			<!-- <li>August 9 - August 13, 2026:
-				<a href="https://kdd2026.kdd.org/" target="_blank">KDD 2026 at Jeju, Korea</a> (TBD)
+				<a href="https://kdd2026.kdd.org/" target="_blank">KDD 2026, Jeju, Korea</a> (TBD)
 			</li> -->
 			<!-- <li>September 8 - September 13, 2026:
-				<a href="https://eccv.ecva.net/Conferences/2026" target="_blank">ECCV 2026 at Malmö, Sweden</a> (TBD)
+				<a href="https://eccv.ecva.net/Conferences/2026" target="_blank">ECCV 2026, Malmö, Sweden</a> (TBD)
 			</li> -->
 			<!-- <li>September 27 - October 1, 2026:
-				<a href="https://www.iros26.org/" target="_blank">IROS 2026 at Pittsburgh, Pennsylvania</a> (TBD)
+				<a href="https://www.iros26.org/" target="_blank">IROS 2026, Pittsburgh, Pennsylvania</a> (TBD)
 			</li> -->
 			<!-- <li>October 24 - October 29, 2026:
-				<a href="https://2026.emnlp.org/" target="_blank">EMNLP 2026 at Budapest, Hungary</a> (TBD)
+				<a href="https://2026.emnlp.org/" target="_blank">EMNLP 2026, Budapest, Hungary</a> (TBD)
 			</li> -->
 			<!-- <li>October 6 - October 9, 2026:
-				<a href="https://colmweb.org/" target="_blank">COLM 2026 at San Francisco, California</a>
+				<a href="https://colmweb.org/" target="_blank">COLM 2026, Hilton San Francisco Union Square, San Francisco, California</a>
 			</li> -->
 			<!-- <li>December X - December X, 2026:
 				<a href="https://neurips.cc/Conferences/2026" target="_blank">NeurIPS 2026 at Sydney, Australia</a> (TBD)
@@ -776,7 +776,7 @@
 		<hr>
 
 		<!-- Adaptation of Agentic AI -->
-		<div class="row publication-item" data-category="highlights, agentic">
+		<div class="row publication-item" data-category="agentic">
 			<div class="col-md-3">
 				<img class="img-fluid img-rounded" src="projects/arxiv25_adaptation/cover.png" style="" alt="">
 			</div>
