added #2 Paper of the day on Hugging Face

--- a/index.html
+++ b/index.html
@@ -767,6 +767,9 @@
 				<a href="projects/arxiv25_adaptation/bib.txt" target="_blank"> <small>[BibTex]</small></a>
 				<a href="https://github.com/pat-jj/Awesome-Adaptation-of-Agentic-AI" target="_blank"><img src="https://img.shields.io/github/stars/pat-jj/Awesome-Adaptation-of-Agentic-AI?style=social" alt="GitHub stars"></a>
 				<br>(*Equal Contribution) (†Corresponding author)<br>
+				<a id="award" href="https://huggingface.co/papers/date/2025-12-19" target="_blank">
+					<font color="red"><b>#2 Paper of the day on Hugging Face</b></font>
+				</a>
 			</div>
 		</div>
 		<hr>
