--- a/index.html
+++ b/index.html
@@ -648,16 +648,16 @@
 				<a href="https://iclr.cc/Conferences/2026" target="_blank">ICLR 2026, Rio de Janeiro, Brazil</a> (TBD)
 			</li>
 			<li>June 3 - June 7, 2026:
-				<a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2026, Colorado Convention Center, Denver, Colorado</a>
+				<a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2026, Denver, Colorado</a>
 			</li>
 			<!-- <li>June 29 - July 3, 2026:
 				<a href="https://learningtheory.org/colt2026/" target="_blank">COLT 2026, San Diego, California</a> (TBD)
 			</li> -->
 			<li>July 2 - July 7, 2026:
-				<a href="https://2026.aclweb.org/" target="_blank">ACL 2026, Grand Hyatt Manchester, San Diego, California</a>
+				<a href="https://2026.aclweb.org/" target="_blank">ACL 2026, San Diego, California</a>
 			</li>
 			<li>July 6 - July 11, 2026:
-				<a href="https://icml.cc/Conferences/2026" target="_blank">ICML 2026, COEX Convention & Exhibition Center, Seoul, South Korea</a> (TBD)
+				<a href="https://icml.cc/Conferences/2026" target="_blank">ICML 2026, Seoul, South Korea</a> (TBD)
 			</li>
 			<!-- <li>August 9 - August 13, 2026:
 				<a href="https://kdd2026.kdd.org/" target="_blank">KDD 2026, Jeju, Korea</a> (TBD)
@@ -671,10 +671,10 @@
 			<!-- <li>October 24 - October 29, 2026:
 				<a href="https://2026.emnlp.org/" target="_blank">EMNLP 2026, Budapest, Hungary</a> (TBD)
 			</li> -->
-			<!-- <li>October 6 - October 9, 2026:
-				<a href="https://colmweb.org/" target="_blank">COLM 2026, Hilton San Francisco Union Square, San Francisco, California</a>
-			</li> -->
-			<!-- <li>December X - December X, 2026:
+			<li>October 6 - October 9, 2026:
+				<a href="https://colmweb.org/" target="_blank">COLM 2026, San Francisco, California</a>
+			</li>
+			<!-- <li>December 6 - December 12, 2026:
 				<a href="https://neurips.cc/Conferences/2026" target="_blank">NeurIPS 2026 at Sydney, Australia</a> (TBD)
 			</li> -->
 		</ul>
@@ -764,6 +764,7 @@
 				<b><a href="https://arxiv.org/abs/2512.16301" target="_blank">arXiv:2512.16301&nbsp;</a></b>
 				<a href="https://arxiv.org/abs/2512.16301" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="https://github.com/pat-jj/Awesome-Adaptation-of-Agentic-AI" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://x.com/alex_prompter/status/2002348526341402979" target="_blank"> <small>[Coverage]&nbsp;</small></a>
 				<a href="projects/arxiv25_adaptation/bib.txt" target="_blank"> <small>[BibTex]</small></a>
 				<a href="https://github.com/pat-jj/Awesome-Adaptation-of-Agentic-AI" target="_blank"><img src="https://img.shields.io/github/stars/pat-jj/Awesome-Adaptation-of-Agentic-AI?style=social" alt="GitHub stars"></a>
 				<br>(*Equal Contribution) (†Corresponding author)<br>
