--- a/index.html
+++ b/index.html
@@ -175,7 +175,10 @@
 							<a href="https://arxiv.org/abs/2501.06590" target="_blank">[ChemAgent]</a>
 						</li>
 					</ul>
-					[25.12]
+					<b>[26.01]</b> I will be on leave until early February. During this period, I may not be able to respond to emails immediately. 
+					<b>I will be back in mid February</b>. Thanks for your understanding and patience!
+					<br>
+					<b>[25.12]</b>
 					<font color="red">
 						 We are seeking students and collaborators to work on research in
 						<b> agentic AI, post-training LLMs, reinforcement learning, AI for Math, AI for Science, and related fields</b>. 
@@ -189,11 +192,11 @@
 	<br>
 
 	<div class="container">
-		<div class="container" id="div-twitter">
+		<!-- <div class="container" id="div-twitter">
 			<a class="twitter-timeline" id="twitter" data-width=50% data-height=650 data-theme=light
 				href="https://twitter.com/lupantech?ref_src=twsrc%5Etfw">Tweets by lupantech</a>
 			<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-		</div>
+		</div> -->
 		<div class="container" id="div-news" >
 			<h3 id="News" style="">News</h3>
 			<hr>
@@ -283,16 +286,16 @@
 					Four papers are accepted to
 					<b><a href="https://iclr.cc/Conferences/2025" target="_blank">ICLR 2025</a></b>.
 				</li>
-				<li>
-					<strong>[12/2024]&nbsp; <font color="red">New!</font></strong>
-					I am co-organizing the <b><a href="https://mathai2024.github.io/" target="_blank">4th MATH-AI</a></b>
-					Workshop at <b><a href="https://neurips.cc/Conferences/2024" target="_blank">NeurIPS 2024</a></b>. See you in Vancouver!
-				</li>
 			</ul>
 			<div id="content"> 
 				<span id="dots"></span>
 				<span id="more">
 					<ul style="margin-top: -15px">
+						<li>
+							<strong>[12/2024]&nbsp; <font color="red">New!</font></strong>
+							I am co-organizing the <b><a href="https://mathai2024.github.io/" target="_blank">4th MATH-AI</a></b>
+							Workshop at <b><a href="https://neurips.cc/Conferences/2024" target="_blank">NeurIPS 2024</a></b>. See you in Vancouver!
+						</li>
 						<li>
 							<strong>[09/2024]&nbsp; <font color="red">New!</font></strong>
 							One paper on self-improving vision-language models is accepted to
