--- a/index.html
+++ b/index.html
@@ -202,6 +202,10 @@
 			<hr>
 			<ul>
 				<li>
+					<strong>[01/2026]&nbsp; <font color="red">New!</font></strong>
+					Excited to have two papers accepted at <b><a href="https://iclr.cc/Conferences/2026" target="_blank">ICLR 2026</a></b>!
+				</li>
+				<li>
 					<strong>[12/2025]&nbsp; <font color="red">New!</font></strong>
 					Excited to be invited to serve as a Senior Area Chair for <b><a href="https://2026.aclweb.org/" target="_blank">ACL 2026</a></b>!
 				</li>
@@ -708,7 +712,7 @@
 		<!-- AgentFlow -->
 		<div class="row publication-item" data-category="highlights, agentic">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="projects/arxiv25_agentflow/cover.png" style="" alt="">
+				<img class="img-fluid img-rounded" src="projects/iclr26_agentflow/cover.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<a href="">
@@ -721,7 +725,7 @@
 				</b><br>
 				Zhuofeng Li*, Haoxiang Zhang*, Seungju Han, Sheng Liu, Jianwen Xie, Yu Zhang, Yejin Choi, James Zou†, <b>Pan Lu†</b>
 				<br>
-				<b><a href="https://arxiv.org/abs/2510.05592" target="_blank">arXiv:2510.05592&nbsp;</a></b>
+				<b><a href="https://arxiv.org/abs/2510.05592" target="_blank">ICLR 2026&nbsp;</a></b>
 				<a href="https://agentflow.stanford.edu/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://huggingface.co/papers/2510.05592" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/AgentFlow" target="_blank"> <small>[Code]&nbsp;</small></a>
@@ -730,7 +734,7 @@
 				<a href="https://www.youtube.com/watch?v=kIQbCQIH1SI" target="_blank"> <small>[YouTube]&nbsp;</small></a>
 				<a href="https://x.com/lupantech/status/1976016000345919803" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="https://join.slack.com/t/agentflow-co/shared_invite/zt-3f712xngl-LfxS4gmftAeKvcxR3nSkWQ" target="_blank"> <small>[Slack]&nbsp;</small></a>
-				<a href="projects/arxiv25_agentflow/bib.txt" target="_blank"> <small>[BibTex]</small></a>
+				<a href="projects/iclr26_agentflow/bib.txt" target="_blank"> <small>[BibTex]</small></a>
 				<a href="https://github.com/lupantech/AgentFlow" target="_blank"><img src="https://img.shields.io/github/stars/lupantech/AgentFlow?style=social" alt="GitHub stars"></a>
 				<br>(*Equal Contribution) (†Co-senior authors)<br>
 				<a id="award" href="https://efficient-reasoning.github.io/" target="_blank">
@@ -748,6 +752,26 @@
 		</div>
 		<hr>
 
+		<!-- TaTToo -->
+		<div class="row publication-item" data-category="agentic">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="projects/iclr26_tattoo/cover.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b>
+					<font color="black">
+						TaTToo: Tool-Grounded Thinking PRM for Test-Time Scaling in Tabular Reasoning
+					</font>
+				</b><br>
+				Jiaru Zou, Soumya Roy, Vinay Kumar Verma, Ziyi Wang, David Wipf, <b>Pan Lu</b>, Sumit Negi, James Zou, Jingrui He
+				<br>
+				<b><a href="https://arxiv.org/abs/2510.06217" target="_blank">ICLR 2026&nbsp;</a></b>
+				<a href="https://huggingface.co/papers/2510.06217" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="projects/iclr26_tattoo/bib.txt" target="_blank"> <small>[BibTex]</small></a>
+			</div>
+		</div>
+		<hr>
+	
 		<!-- Adaptation of Agentic AI -->
 		<div class="row publication-item" data-category="highlights, agentic">
 			<div class="col-md-3">
@@ -804,26 +828,6 @@
 				<a id="award" href="https://huggingface.co/papers/date/2025-11-27" target="_blank">
 					<font color="red"><b>#1 Paper of the day on Hugging Face</b></font>
 				</a>
-			</div>
-		</div>
-		<hr>
-
-		<!-- TaTToo -->
-		<div class="row publication-item" data-category="agentic">
-			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="projects/arxiv25_tattoo/cover.png" style="" alt="">
-			</div>
-			<div class="col-md-9">
-				<b>
-					<font color="black">
-						TaTToo: Tool-Grounded Thinking PRM for Test-Time Scaling in Tabular Reasoning
-					</font>
-				</b><br>
-				Jiaru Zou, Soumya Roy, Vinay Kumar Verma, Ziyi Wang, David Wipf, <b>Pan Lu</b>, Sumit Negi, James Zou, Jingrui He
-				<br>
-				<b><a href="https://arxiv.org/abs/2510.06217" target="_blank">arXiv:2510.06217&nbsp;</a></b>
-				<a href="https://huggingface.co/papers/2510.06217" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="projects/arxiv25_tattoo/bib.txt" target="_blank"> <small>[BibTex]</small></a>
 			</div>
 		</div>
 		<hr>
