--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@
 			<hr>
 			<ul>
 				<li>
+					<strong>[02/2026]&nbsp;<font color="red">New!</font></strong>
+					Honored to be invited to serve as a reviewer for
+					<b><a href="https://www.nature.com/nathumbehav/" target="_blank">Nature Human Behaviour</a></b>!
+				</li>
+				<li>
 					<strong>[01/2026]&nbsp; <font color="red">New!</font></strong>
 					Excited to have two papers accepted at <b><a href="https://iclr.cc/Conferences/2026" target="_blank">ICLR 2026</a></b>!
 				</li>
@@ -275,7 +280,6 @@
 					<strong>[04/2025]&nbsp; <font color="red">New!</font></strong>
 					Excited to be invited to serve as an Area Chair for <b><a href="https://nips.cc/Conferences/2025" target="_blank">NeurIPS 2025</a></b>!
 				</li>
-
 				<li>
 					<strong>[03/2025]&nbsp; <font color="red">New!</font></strong>
 					Thrilled to announce that <b><a href="https://textgrad.com/" target="_blank">TextGrad</a></b> is published in <b><a href="https://www.nature.com/articles/s41586-025-08661-4" target="_blank">Nature</a></b>!
@@ -285,16 +289,17 @@
 					Our <b><a href="https://octotools.github.io/" target="_blank">OctoTools</a></b> agentic framework with extensible tools is available at
 					<b><a href="https://arxiv.org/abs/2502.11271" target="_blank">Preprint</a></b>.
 				</li>
-				<li>
-					<strong>[01/2025]&nbsp; <font color="red">New!</font></strong>
-					Four papers are accepted to
-					<b><a href="https://iclr.cc/Conferences/2025" target="_blank">ICLR 2025</a></b>.
-				</li>
+
 			</ul>
 			<div id="content"> 
 				<span id="dots"></span>
 				<span id="more">
 					<ul style="margin-top: -15px">
+						<li>
+							<strong>[01/2025]&nbsp; <font color="red">New!</font></strong>
+							Four papers are accepted to
+							<b><a href="https://iclr.cc/Conferences/2025" target="_blank">ICLR 2025</a></b>.
+						</li>
 						<li>
 							<strong>[12/2024]&nbsp; <font color="red">New!</font></strong>
 							I am co-organizing the <b><a href="https://mathai2024.github.io/" target="_blank">4th MATH-AI</a></b>
@@ -2239,6 +2244,10 @@
 				</ul>
 				<h4 id="Service" style="">Journal Reviewer</h3>
 					<ul>
+						<li>
+							<a href="https://www.nature.com/nathumbehav/"
+								target="_blank">Nature Human Behaviour</a>
+						</li>
 						<li>
 							<a href="https://www.jmlr.org/"
 								target="_blank">Journal of Machine Learning Research</a>
