--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@
 			<hr>
 			<ul>
 				<li>
+					<strong>[02/2026]</strong>
+					<span style="color: red; font-weight: bold;">New!</span>
+					&nbsp;Excited that <b><a href="https://agentflow.stanford.edu/" target="_blank">AgentFlow</a></b> was selected for <b>Oral Presentation</b> (Top 1.1%) at <b><a href="https://iclr.cc/Conferences/2026" target="_blank">ICLR 2026</a></b>! 🎉
+				</li>
+				<li>
 					<strong>[02/2026]&nbsp;<font color="red">New!</font></strong>
 					Honored to be invited to serve as a reviewer for
 					<b><a href="https://www.nature.com/nathumbehav/" target="_blank">Nature Human Behaviour</a></b>!
@@ -727,7 +732,7 @@
 						In-the-Flow Agentic System Optimization for Effective Planning and Tool Use
 					</font>
 				</b><br>
-				Zhuofeng Li*, Haoxiang Zhang*, Seungju Han, Sheng Liu, Jianwen Xie, Yu Zhang, Yejin Choi, James Zou†, <b>Pan Lu†</b>
+				Zhuofeng Li*, Haoxiang Zhang*, Seungju Han, Sheng Liu, Jianwen Xie, Yu Zhang, Yejin Choi, James Zou†, <b>Pan Lu*†</b>
 				<br>
 				<b><a href="https://arxiv.org/abs/2510.05592" target="_blank">ICLR 2026&nbsp;</a></b>
 				<a href="https://agentflow.stanford.edu/" target="_blank"> <small>[Project]&nbsp;</small></a>
@@ -741,17 +746,22 @@
 				<a href="projects/iclr26_agentflow/bib.txt" target="_blank"> <small>[BibTex]</small></a>
 				<a href="https://github.com/lupantech/AgentFlow" target="_blank"><img src="https://img.shields.io/github/stars/lupantech/AgentFlow?style=social" alt="GitHub stars"></a>
 				<br>(*Equal Contribution) (†Co-senior authors)<br>
-				<a id="award" href="https://efficient-reasoning.github.io/" target="_blank">
-					<font color="red"><b>🏆 Best Paper Runner-up, NeurIPS 2025 Effective Reasoning Workshop</b></font>
+				<a id="award" target="_blank">
+					<font color="red"><b>🏆 ICLR 2026 Oral (Top 3%)</b> </font>
 				</a>
 				<br>
-				<a id="award" href="https://huggingface.co/papers/date/2025-10-08" target="_blank">
-					<font color="red"><b>#2 Paper of the day on Hugging Face</b></font>
+				<a id="award" href="https://efficient-reasoning.github.io/" target="_blank">
+					<font color="red"><b>🏆 Best Paper Runner-up, NeurIPS 2025 ER Workshop</b></font>
 				</a>
 				<br>
 				<a id="award" href="https://huggingface.co/spaces?date=2025-W42" target="_blank">
 					<font color="red"><b>#1 Space of the week on Hugging Face</b></font>
 				</a>
+				<br>
+				<a id="award" href="https://huggingface.co/papers/date/2025-10-08" target="_blank">
+					<font color="red"><b>#2 Paper of the day on Hugging Face</b></font>
+				</a>
+
 			</div>
 		</div>
 		<hr>
@@ -929,7 +939,7 @@
 				<a href="projects/neurips25_ineqmath/bib.txt" target="_blank"> <small>[BibTex]</small></a>
 				<!-- <a href="https://github.com/lupantech/ineqmath" target="_blank"><img src="https://img.shields.io/github/stars/lupantech/ineqmath?style=social" alt="GitHub stars"></a> -->
 				<br>(*Equal Contribution)<br>
-				<a id="award" href="https://knowledge-nlp.github.io/naacl2025/index.html" target="_blank">
+				<a id="award" target="_blank">
 					<font color="red"><b>🏆 NeurIPS 2025 Spotlight (Top 3%)</b> </font>
 				</a>
 			</div>
@@ -1007,7 +1017,7 @@
 				<a href="https://github.com/octotools/octotools" target="_blank"><img src="https://img.shields.io/github/stars/octotools/octotools?style=social" alt="GitHub stars"></a>
 				<br>(*Equal Contribution)<br>
 				<a id="award" href="https://knowledge-nlp.github.io/naacl2025/index.html" target="_blank">
-					<font color="red"><b>🏆 Best Paper Award, KnowledgeNLP Workshop at NAACL 2025</b> </font>
+					<font color="red"><b>🏆 Best Paper Award, NAACL 2025 KnowledgeNLP Workshop</b> </font>
 				</a>
 			</div>
 		</div>
