--- a/index.html
+++ b/index.html
@@ -711,8 +711,8 @@
 			<button class="category-btn" data-category="all">All</button>
 			<button class="category-btn active" data-category="highlights">Highlights</button>
 			<button class="category-btn" data-category="agentic">Agentic AI</button>
-			<button class="category-btn" data-category="ai-math">AI for Math</button>
 			<button class="category-btn" data-category="ai-science">AI for Science</button>
+			<button class="category-btn" data-category="ai-math">AI for Math</button>
 			<button class="category-btn" data-category="llm-reasoning">LLM/VLM Reasoning</button>
 			<button class="category-btn" data-category="others">Multimodal AI</button>
 		</div>
@@ -747,7 +747,7 @@
 				<a href="https://github.com/lupantech/AgentFlow" target="_blank"><img src="https://img.shields.io/github/stars/lupantech/AgentFlow?style=social" alt="GitHub stars"></a>
 				<br>(*Equal Contribution) (†Co-senior authors)<br>
 				<a id="award" target="_blank">
-					<font color="red"><b>🏆 ICLR 2026 Oral (Top 3%)</b> </font>
+					<font color="red"><b>🏆 ICLR 2026 Oral (Top 1.1%)</b> </font>
 				</a>
 				<br>
 				<a id="award" href="https://efficient-reasoning.github.io/" target="_blank">
@@ -762,6 +762,29 @@
 					<font color="red"><b>#2 Paper of the day on Hugging Face</b></font>
 				</a>
 
+			</div>
+		</div>
+		<hr>
+
+		<!-- iSight -->
+		<div class="row publication-item" data-category="ai-science, highlights">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="projects/arxiv26_isight/cover.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b>
+					<font color="black">
+						iSight: Towards expert-AI co-assessment for improved immunohistochemistry staining interpretation
+					</font>
+				</b><br>
+				Jacob S. Leiby*, Jialu Yao*, <b>Pan Lu*</b>, George Hu, Anna Davidian, Shunsuke Koga, Olivia Leung, Pravin Patel, Isabella Tondi Resta, Rebecca Rojansky, Derek Sung, Eric Yang, Paul J. Zhang, Emma Lundberg, Dokyoon Kim, Serena Yeung-Levy, James Zou, Thomas Montine, Jeffrey Nirschl, Zhi Huang
+				<br>
+				<b><a href="https://arxiv.org/abs/2602.04063" target="_blank">arXiv:2602.04063&nbsp;</a></b>
+				<a href="https://arxiv.org/abs/2602.04063/pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://huggingface.co/datasets/nirschl-lab/hpa10m" target="_blank"> <small>[Data]&nbsp;</small></a>
+				<a href="https://github.com/zhihuanglab/iSight" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="projects/arxiv26_isight/bib.txt" target="_blank"> <small>[BibTex]</small></a>
+				<br>*Equal Contribution<br>
 			</div>
 		</div>
 		<hr>
